--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "aos": "^2.2.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-responsive-carousel": "^3.1.28",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-scroll": "^1.6.4",
+    "react-slick": "^0.15.4",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
