fix type in packackge.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "resume_site_17",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://myusername.github.io/my-app",
+  "homepage": "https://andrewjc88.github.io/resume_site_17",
   "dependencies": {
     "aos": "^2.2.0",
     "gh-pages": "^1.0.0",
