add resume download link and broke dns

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "resume_site_17",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://andrewjc88.github.io/resume_site_17",
+  "homepage": "http://andrewjc88.github.io/resume_site_17",
   "dependencies": {
     "aos": "^2.2.0",
-    "gh-pages": "^1.0.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "gh-pages": "^1.1.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-scripts": "1.0.17",
     "react-scroll": "^1.6.4",
     "react-slick": "^0.15.4",
