--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "aos": "^2.2.0",
     "gh-pages": "^1.1.0",
+    "jquery": "^3.2.1",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-scripts": "1.0.17",
